--- a/clubs/templates/log_in.html
+++ b/clubs/templates/log_in.html
@@ -1,11 +1,18 @@
-<!DOCTYPE html>
 <html>
 <head>
-  <title>Login</title>
+  <title> Log In </title>
 </head>
-<body>
+  <body>
+    <h1> Log In </h1>
+    {% for message in messages %}
+      <p><b>{{ message }}</b></p>
+    {% endfor %}
+    
+    <form action= "{% url 'log_in' %}" method="post">
+      {% csrf_token %}
 
-  <h1>Login!</h1>
+      {{ form.as_p }}
 
-</body>
+    <input type="submit" value="Log In">
+  </body>
 </html>
