--- a/clubs/templates/partials/user_profile.html
+++ b/clubs/templates/partials/user_profile.html
@@ -11,5 +11,9 @@
 <div class="row content">
   <div class="col-12">
     <p class="profile-bio">{{ user.bio }}</p>
+    <h4>My Experience Level:</h4>
+<div class="row content">
+    <div class="col-12">
+    <p class="profile-bio">{{ user.experience }}</p>
   </div>
 </div>
