Added separate view and template for  a members list

--- a/clubs/templates/full_user_list.html
+++ b/clubs/templates/full_user_list.html
@@ -13,6 +13,7 @@
             </td>
             <td>{{ user.full_name }}</td>
             <td><a href="{% url 'show_user' user.id %}">{{ user.email }}</a></td>
+            <td>{{ user.experience }}</td>
           </tr>
         {% endfor %}
       </table>
