--- a/clubs/templates/partials/user_profile_for_members.html
+++ b/clubs/templates/partials/user_profile_for_members.html
@@ -7,13 +7,9 @@
     </div>
   </div>
 </div>
-<h4>My Bio:</h4>
+<h4>Bio:</h4>
 <div class="row content">
   <div class="col-12">
     <p class="profile-bio">{{ user.bio }}</p>
-    <h4>My Experience Level:</h4>
-<div class="row content">
-    <div class="col-12">
-    <p class="profile-bio">{{ user.experience }}</p>
   </div>
 </div>
