Added view and template for officers to view all users in club

--- a/clubs/templates/home.html
+++ b/clubs/templates/home.html
@@ -10,6 +10,9 @@
   <ul>
     <li><a href='{% url 'log_in' %}'> Log In </a></li>
     <li><a href='{% url 'register' %}'> Register </a></li>
+    <br><br>
+    <li><a href='{% url 'member_list' %}'> Member List for Members </a></li>
+    <li><a href='{% url 'full_user_list' %}'> User List for Officers </a></li>
   </ul>
 
 </body>
