--- a/clubs/templates/show_user.html
+++ b/clubs/templates/show_user.html
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row content">
     <div class="col-xs-12 col-lg-6 col-xl-4">
-      {% include 'partials/user_profile.html' %}
+      {% include 'partials/user_profile_for_officers.html' %}
     </div>
   </div>
 </div>
