Added table headers and hyperlinks to display user information

--- a/clubs/templates/full_user_list.html
+++ b/clubs/templates/full_user_list.html
@@ -6,6 +6,10 @@
       <h1>Chess Club Users:</h1>
       <br> <br>
       <table class="table">
+        <th scope="col"> </th>
+        <th scope="col">Full Name:</th>
+        <th scope="col">Email:</th>
+        <th scope="col">Experience Level:</th>
         {% for user in users %}
           <tr>
             <td>
