--- a/clubs/templates/member_list.html
+++ b/clubs/templates/member_list.html
@@ -6,12 +6,16 @@
       <h1>Chess Club Members:</h1>
       <br> <br>
       <table class="table">
+        <th scope="col"> </th>
+        <th scope="col">Full Name:</th>
+        <th scope="col">Email:</th>
         {% for user in users %}
+
           <tr>
             <td>
               <img src="{{ user.mini_gravatar }}" alt="Gravatar of {{ user.email }}" class="rounded-circle" >
             </td>
-            <td>{{ user.full_name }}</td>
+            <td>{{ user.full_name }}
             <td><a href="{% url 'show_member' user.id %}">{{ user.email }}</a></td>
           </tr>
         {% endfor %}
