Edit the browsing scope of  member's information for member, officer, and clubowner

--- a/clubs/templates/full_user_list.html
+++ b/clubs/templates/full_user_list.html
@@ -9,7 +9,9 @@
         <th scope="col"> </th>
         <th scope="col">Full Name:</th>
         <th scope="col">Email:</th>
+        <th scope="col">Bio:</th>
         <th scope="col">Experience Level:</th>
+        <th scope="col">Statement:</th>
         {% for user in users %}
           <tr>
             <td>
