--- a/clubs/templates/member_list.html
+++ b/clubs/templates/member_list.html
@@ -8,9 +8,8 @@
       <table class="table">
         <th scope="col"> </th>
         <th scope="col">Full Name:</th>
-        <th scope="col">Email:</th>
+        <th scope="col">Bio:</th>
         {% for user in users %}
-
           <tr>
             <td>
               <img src="{{ user.mini_gravatar }}" alt="Gravatar of {{ user.email }}" class="rounded-circle" >
