--- a/clubs/templates/partials/menu.html
+++ b/clubs/templates/partials/menu.html
@@ -14,7 +14,7 @@
       </a>
       <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="user-account-dropdown">
         <li><a class="dropdown-item" href="{% url 'profile' %}">Change profile</a></li>
-        <li><a class="dropdown-item" href="#">Change password</a></li>
+        <li><a class="dropdown-item" href="{% url 'password' %}">Change password</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="{% url 'log_out' %}">Log out</a></li>
       </ul>
