Create buttons for promotion and demotion

--- a/clubs/templates/full_user_list.html
+++ b/clubs/templates/full_user_list.html
@@ -9,6 +9,7 @@
         <th scope="col"> </th>
         <th scope="col">Full Name:</th>
         <th scope="col">Email:</th>
+        <th scope="col">Position:</th>
         {% for user in users %}
           <tr>
             <td>
