--- a/clubs/templates/home.html
+++ b/clubs/templates/home.html
@@ -12,7 +12,7 @@
     <br><br>
     <li><a href='{% url 'member_list' %}'> Member List for Members </a></li>
     <li><a href='{% url 'full_user_list' %}'> Member List for Officers </a></li>
-    <li><a href='{% url 'full_user_list' %}'> Member List for Officers </a></li>
+    <li><a href='{% url 'memberlist_Clubowner' %}'> Member List for Owner </a></li>
 
   </ul>
 
