--- a/clubs/templates/member_list.html
+++ b/clubs/templates/member_list.html
@@ -8,7 +8,7 @@
       <table class="table">
         <th scope="col"> </th>
         <th scope="col">Full Name:</th>
-        <th scope="col">Experience:</th>
+        <th scope="col">Position:</th>
         {% for user in users %}
           <tr>
             <td>
