--- a/clubs/templates/memberlist_Clubowner.html
+++ b/clubs/templates/memberlist_Clubowner.html
@@ -3,15 +3,14 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <h1>Chess Club Members(For Officer and Clubowner):</h1>
+      <h1>Chess Club Members(For Officer):</h1>
       <br> <br>
       <table class="table">
         <th scope="col"> </th>
         <th scope="col">Full Name:</th>
         <th scope="col">Email:</th>
-        <th scope="col">Bio:</th>
-        <th scope="col">Experience Level:</th>
-        <th scope="col">Personal Statement:</th>
+        <th scope="col">Position:</th>
+        <th scope="col">Promotion/Demotion</th>
         {% for user in users %}
           <tr>
             <td>
@@ -20,6 +19,7 @@
             <td>{{ user.full_name }}</td>
             <td><a href="{% url 'show_user' user.id %}">{{ user.email }}</a></td>
             <td>{{ user.experience }}</td>
+            <td> <button type="button">Promote</button><button type="button">Demote</button></td>
           </tr>
         {% endfor %}
       </table>
