--- a/clubs/templates/member_list.html
+++ b/clubs/templates/member_list.html
@@ -22,4 +22,12 @@
     </div>
   </div>
 </div>
+
+<form action="{% url 'log_out' %}" method="post">
+  {% csrf_token %}
+  <button type="submit" value="log_out">
+    Logout
+  </button>
+</form>
+
 {% endblock %}
