change the postion of log in

--- a/clubs/templates/log_in.html
+++ b/clubs/templates/log_in.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="wide=device-width, initial_scale=1.0">
-  <link href="{% static 'custom.css' %}" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../../../static/custom.css"/>
   <title> Log In </title>
 </head>
 
