--- a/static/custom.css
+++ b/static/custom.css
@@ -16,7 +16,7 @@
 }
 
 #cover-image {
-  background: url('images/Background.png') no-repeat center center fixed;
+  background: url('images/Backgroun.png') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -42,12 +42,13 @@
   font-weight: 600;
 }
 .cover-text {
-  font-size: 0.9rem;
+  font-size: 2rem;
   color: #787777;
 }
 .cover-card {
-  postion: absolut;
-  background-color: #FFFFFF;
+  margin: 0 auto! important;
+  text-align: center;
+  background-color: white;
   max-width: 20rem;
   max-height: 40rem;
   padding-top: 20px;
@@ -55,8 +56,8 @@
   padding-right: 10px;
   padding-bottom: 30px;
   border-radius: 10px 10px;
-  text-align: center;
 }
+
 .cover-card-block {
   opacity: 1
 }
