Made the box in the centre of page and edit the form of submit button

--- a/clubs/templates/log_in.html
+++ b/clubs/templates/log_in.html
@@ -22,7 +22,7 @@
             <form action="{% url 'log_in' %}" method="post">
               {% csrf_token %}
               {{ form.as_p }}
-              <div class="inputBox">
+              <div class="Box">
                 <input type="submit" value="Sign In">
               </div>
 
