--- a/static/custom.css
+++ b/static/custom.css
@@ -16,11 +16,10 @@
 }
 
 #cover-image {
-  background: url('images/Backgroun.png') no-repeat center center fixed;
+  background: url('images/Chess.png') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
-  background-attachment: fixed;
   -o-background-size: cover;
 }
 
@@ -39,22 +38,34 @@
  */
 .cover-heading {
   font-size: 2rem;
-  font-weight: 600;
+  font-weight: 800;
+  font-style: ;
 }
 .cover-text {
-  font-size: 2rem;
+  font-size: 0.8rem;
   color: #787777;
+  font-style: normal;
+  font-weight: 800;
 }
 .cover-card {
-  margin: 0 auto! important;
+  box-shadow: 2px 2px 10px black;
+  margin: 0 auto;
+  position: absolute;
+  top:50%;
+  left:50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   text-align: center;
   background-color: white;
   max-width: 20rem;
-  max-height: 40rem;
-  padding-top: 20px;
+  max-height: 80rem;
+  padding-top: 10px;
   padding-left: 10px;
   padding-right: 10px;
-  padding-bottom: 30px;
+  padding-bottom: 130px;
   border-radius: 10px 10px;
 }
 
@@ -65,11 +76,28 @@
   margin-top: 6px;
   letter-spacing: 0.5px;
   font-style: normal;
-  font-size: 0.7rem;
-  font-weight: 300;
+  font-size: 0.8rem;
+  font-weight: 200;
   color: #787777;
 }
 
+.Box input[type="submit"] {
+  -moz-user-select: none;
+  background-color: black;
+  background-image: -moz-linear-gradient(center top, #F5F5F5, #F1F1F1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 4px 4px 4px 4px;
+  cursor: default;
+  font-family: arial, sans-serif;
+  font-size: 1rem;
+  color: white;
+  font-weight: 500;
+  height: 39px;
+  line-height: 37px;
+  min-width: 270px;
+  padding: 0 8px;
+  text-align: center;
+}
 
 /*
  * forms
