--- a/clubs/templates/partials/user_profile_for_officers.html
+++ b/clubs/templates/partials/user_profile_for_officers.html
@@ -23,5 +23,11 @@
 <div class="row content">
     <div class="col-12">
     <p class="profile-bio">{{ user.statement }}</p>
+    <h4>Rank</h4>
+<div class="row content">
+    <div class="col-12">
+    <p class="profile-bio">{{ user.get_user_type_display }}</p>
   </div>
+  </div>
+
 </div>
