--- a/static/custom.css
+++ b/static/custom.css
@@ -16,7 +16,7 @@
 }
 
 #cover-image {
-  background: url('images/Chess.png') no-repeat center center fixed;
+  background: url('images/Background.png') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -37,9 +37,10 @@
  * Cover page
  */
 .cover-heading {
+  letter-spacing: 0.01px;
   font-size: 2rem;
   font-weight: 800;
-  font-style: ;
+  font-style: normal ;
 }
 .cover-text {
   font-size: 0.8rem;
@@ -62,10 +63,10 @@
   background-color: white;
   max-width: 20rem;
   max-height: 80rem;
-  padding-top: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-bottom: 130px;
+  padding-top: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 100px;
   border-radius: 10px 10px;
 }
 
@@ -94,7 +95,7 @@
   font-weight: 500;
   height: 39px;
   line-height: 37px;
-  min-width: 270px;
+  min-width: 250px;
   padding: 0 8px;
   text-align: center;
 }
