--- a/clubs/templates/members_and_officers_for_clubowner.html
+++ b/clubs/templates/members_and_officers_for_clubowner.html
@@ -19,7 +19,7 @@
             <td>{{ user.full_name }}</td>
             <td><a href="{% url 'show_user' user.id %}">{{ user.email }}</a></td>
             <td>{{ user.get_user_type_display }}</td>
-            <td><button type="button">Promote</button><button type="button">Demote</button></td>
+            <td><button type="button" onclick="location.href='{% url 'promote' user.id %}'">Promote</button><button type="button" onclick="location.href='{% url 'demote' user.id %}'">Demote</button></td>
           </tr>
         {% endfor %}
       </table>
