Add url with menu of homepage

--- a/clubs/templates/memberlist_Clubowner.html
+++ b/clubs/templates/memberlist_Clubowner.html
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <h1>Chess Club Members(For Officer):</h1>
+      <h1>Chess Club Members(For Owner):</h1>
       <br> <br>
       <table class="table">
         <th scope="col"> </th>
