--- a/static/homepage.css
+++ b/static/homepage.css
@@ -23,7 +23,7 @@ nav{
   cursor: pointer;
 }
 nav ul{
-  background: #000;
+  background: #DEB887;
   width: 100%;
   margin-top: 10px;
 }
@@ -42,7 +42,7 @@ nav.sticky{
   top:0;
   left:0;
   padding: 10px 8%;
-  background: #000;
+  background: #DEB887;
   display: flex;
   align-items: center;
   justify-content: space-between;
