--- a/clubs/templates/partials/menu.html
+++ b/clubs/templates/partials/menu.html
@@ -1,7 +1,7 @@
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
     <li class="nav-item">
-      <a class="nav-link" href="{% url 'full_user_list' %}">Users</a>
+      <a class="nav-link" href="{% url 'member_list' %}">Users</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{% url 'home' %}">Home</a>
