--- a/clubs/templates/profile.html
+++ b/clubs/templates/profile.html
@@ -1,5 +1,11 @@
 {% extends 'base_content.html' %}
 {% block content %}
+
+<head>
+  <meta content="text/html" charset="UTF-8">
+  <title>profile</title>
+</head>
+
 <div class="container">
   <div class="row">
     <div class="col-12">
