--- a/static/homepage.css
+++ b/static/homepage.css
@@ -8,7 +8,7 @@
 .header{
   width: 100%;
   height: 100vh;
-  background-image: url('images/Background4.png');
+  background-image: url('images/Background2.png');
   background-position: center;
   background-size: cover;
 }
@@ -23,7 +23,7 @@ nav{
   cursor: pointer;
 }
 nav ul{
-  background: #DEB887;
+  background:#C4C4C4;
   width: 100%;
   margin-top: 10px;
 }
@@ -42,7 +42,7 @@ nav.sticky{
   top:0;
   left:0;
   padding: 10px 8%;
-  background: #DEB887;
+  background: #C4C4C4;
   display: flex;
   align-items: center;
   justify-content: space-between;
