Complete transfer ownership

--- a/clubs/templates/owner_home.html
+++ b/clubs/templates/owner_home.html
@@ -27,6 +27,7 @@
         <li>APPLICATION</li>
         <li><a href='{% url 'applicant_list' %}' style="text-decoration: none">Applicants</a></li>
         <li><a href='{% url 'members_and_officers_for_clubowner' %}' style="text-decoration: none">Club Users</a></li>
+        <li><a href='{% url 'officers' %}' style="text-decoration: none">Ownership</a></li>
         <li><a href='{% url 'profile' %}' style="text-decoration: none">MY PROFILE</a></li>
       </ul>
     </nav>
