--- a/static/homepage.css
+++ b/static/homepage.css
@@ -1,54 +1,130 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'poppins', sans-serif;
 }
 
-.header{
+body {
+  background: #000;
+  min-height: 200vh;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 100vh;
-  background-image: url('images/Background2.png');
-  background-position: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: 0.7s;
+  padding: 40px 100px;
+  z-index: 100000;
+}
+
+header.sticky {
+  padding: 5px 100px;
+  background: #fff;
+}
+
+header.logo {
+  position: relative;
+  text-decoration: none;
+  font-size: 2em;
+  letter-spacing: 2px;
+  transition: 0.7s;
+}
+
+header ul {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header ul li {
+  position: relative;
+  list-style: none;
+}
+
+header ul li a {
+  position: relative;
+  margin: 0 15px;
+  text-decoration: none;
+  color: #fff;
+  letter-spacing: 2px;
+  font-weight: 700px;
+  transition: 0.7s;
+}
+header ul li a:hover {
+  color: gray;
+}
+
+button {
+  color: white;
+  padding: 9px 25px;
+  background-color: gray;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+button:hover{
+  color:#000;
+}
+p{
+  font-weight: 300;
+  color: #111;
+}
+.banner {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url('images/Background2.png');
   background-size: cover;
 }
-nav{
-  width: 100%;
-  padding: 20px 0;
+.banner .content{
+  max-width: 900px;
   text-align: center;
 }
-.logo{
-  width: 70px;
-  margin: 0.5px 0;
-  cursor: pointer;
-}
-nav ul{
-  background:#C4C4C4;
-  width: 100%;
-  margin-top: 10px;
-}
-nav ul li{
-  display: inline-block;
-  list-style: none;
-  margin: 15px 20px;
+.banner .content h2{
+  font-size: 5em;
   color: #fff;
 }
-.text{
-  padding: 20px 8%;
+.banner .content p{
+  font-size: 1.5em;
+  color: #fff;
 }
 
-nav.sticky{
-  position: fixed;
-  top:0;
-  left:0;
-  padding: 10px 8%;
-  background: #C4C4C4;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  transition: padding 1s;
+.btn{
+  font-size: 1em;
+  color: #fff;
+  background: #c5a772;
+  display: inline-block;
+  padding: 10px 30px;
+  margin-top: 20px;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: 2px;
+  transition: 0.5s;
+}
+.btn:hover{
+  letter-spacing: 6px;
 }
 
-nav.sticky ul{
-  width: auto;
+.about p{
+  padding: 20px;
+  color: white;
+}
+
+header.sticky ul li a {
+  color: #000;
+}
+
+header.sticky ul li a:hover{
+  color: gray;
 }
