--- a/clubs/templates/partials/user_profile_for_officers.html
+++ b/clubs/templates/partials/user_profile_for_officers.html
@@ -27,6 +27,10 @@
 <div class="row content">
     <div class="col-12">
     <p class="profile-bio">{{ user.get_user_type_display }}</p>
+    <h4>Clubs:</h4>
+<div class="row content">
+    <div class="col-12">
+    <p class="profile-bio">{{ user.club }}</p>
   </div>
   </div>
 
