--- a/clubs/templates/officer_home.html
+++ b/clubs/templates/officer_home.html
@@ -16,8 +16,8 @@
     <ul>
       <li><a>COMPETITION</a></li>
       <li><a>CLUBS</a></li>
-      <li><a href='{% url 'applicant_list' %}' style="text-decoration: none">APPLICATION</a></li>
-      <li><a>MY CLUB</a></li>
+      <li><a href='{% url 'applicant_list' %}' style="text-decoration: none">APPLICANTS</a></li>
+      <li><a href='{% url 'member_list_for_officer' %}' style="text-decoration: none">MEMBERS</a></li>
       <li><a href='{% url 'profile' %}' style="text-decoration: none">MY PROFILE</a></li>
     </ul>
     <a class="logout" href='{% url 'log_out' %}'><button>LOG OUT</button></a>
