--- a/clubs/templates/owner_home.html
+++ b/clubs/templates/owner_home.html
@@ -27,9 +27,9 @@
   <section class="banner">
     <div class="content">
       <h2>Let's Play Together</h2>
-      <p>Join clubs to play with other</p>
+      <p>Create club to play with friends</p>
       <br><br>
-      <a href="#" class="btn">Join Club</a>
+      <a href="#" class="btn">Creat Club</a>
     </div>
   </section>
 
