--- a/clubs/templates/waiting_list.html
+++ b/clubs/templates/waiting_list.html
@@ -23,9 +23,9 @@
   <section class="banner">
     <div class="content">
       <h2>Let's Play Together</h2>
-      <p>Join clubs to play with other</p>
+      <p>Create club to play with other</p>
       <br><br>
-      <a href="#" class="btn">Join Club</a>
+      <a href="#" class="btn">Create Club</a>
     </div>
   </section>
 
