--- a/clubs/templates/applicant_list.html
+++ b/clubs/templates/applicant_list.html
@@ -6,7 +6,7 @@
 
 <head>
   <meta name="viewport" content="wide=device-width, initial_scale=1.0">
-  <link rel="stylesheet" type="text/css" href="../../../static/applicant.css" />
+  <link rel="stylesheet" type="text/css" href="../../../static/list.css" />
   <title>applicant</title>
 </head>
 
@@ -14,6 +14,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
+        <br><br>
         <h2>Applicants</h2>
         <table class="table">
           <th scope="col"> </th>
@@ -33,6 +34,7 @@
               <a class="approve" href="{% url 'approve' user.id %}"><button>APPROVE</button></a>
               <a class="unapprove" href="{% url 'unapprove' user.id %}" style="text-decoration: none"><button1>UNAPPROVE</button1></a>
             </td>
+          </tr>
             {% endfor %}
         </table>
       </div>
