Add home button for navigation

--- a/clubs/templates/member_list_for_officer.html
+++ b/clubs/templates/member_list_for_officer.html
@@ -12,6 +12,7 @@
     <div class="col-12">
       <br><br>
       <h2>Chess Club Members</h2>
+      <a class="btn btn-primary" href="{% url 'officer_home' %}"><button2>Home</button2></a>
       <table class="table">
         <th scope="col"> </th>
         <th scope="col">Full Name</th>
