--- a/clubs/templates/members_and_officers_for_clubowner.html
+++ b/clubs/templates/members_and_officers_for_clubowner.html
@@ -11,7 +11,8 @@
   <div class="row">
     <div class="col-12">
       <br><br>
-      <h2>Chess Club Members</h2>
+      <h2>Chess Club Member</h2>
+      <a class="btn btn-primary" href="{% url 'owner_home' %}"><button2>Home</button2></a>
       <table class="table">
         <th scope="col"> </th>
         <th scope="col">Full Name</th>
