--- a/clubs/templates/officers.html
+++ b/clubs/templates/officers.html
@@ -12,6 +12,7 @@
     <div class="col-12">
       <br> <br>
       <h2>Chess Club Officers</h2>
+      <a class="btn btn-primary" href="{% url 'owner_home' %}"><button2>Home</button2></a>
       <table class="table">
         <th scope="col"> </th>
         <th scope="col">Full Name</th>
