Add redirection for users from club list

--- a/clubs/templates/member_home.html
+++ b/clubs/templates/member_home.html
@@ -15,7 +15,7 @@
     <img src="../../static/images/logoko.png" width="90" height="80" class="logo">
     <ul>
       <li><a>COMPETITION</a></li>
-      <li><a>CLUBS</a></li>
+      <li><a href='{% url 'club_list' %}' style="text-decoration: none">CLUBS</a></li>
       <li><a href='{% url 'member_list' %}' style="text-decoration: none">MEMBERS</a></li>
       <li><a href='{% url 'profile' %}' style="text-decoration: none">MY PROFILE</a></li>
     </ul>
