--- a/clubs/templates/waiting_list.html
+++ b/clubs/templates/waiting_list.html
@@ -14,7 +14,7 @@
   <header>
     <img src="../../static/images/logoko.png" width="90" height="80" class="logo">
     <ul>
-      <li><a>CLUBS</a></li>
+      <li><a href='{% url 'club_list' %}' style="text-decoration: none">CLUBS</a></li>
       <li><a href='{% url 'profile' %}' style="text-decoration: none">MY PROFILE</a></li>
     </ul>
     <a class="logout" href='{% url 'log_out' %}'><button>LOG OUT</button></a>
