--- a/clubs/templates/applicant_list.html
+++ b/clubs/templates/applicant_list.html
@@ -6,7 +6,6 @@
 
 <head>
   <meta name="viewport" content="wide=device-width, initial_scale=1.0">
-  <link rel="stylesheet" type="text/css" href="../../../static/list.css" />
   <title>applicant</title>
 </head>
 
@@ -32,10 +31,12 @@
             <td>{{ user.get_user_type_display }}</td>
             <td>
               <a class="approve" href="{% url 'approve' user.id %}"><button>APPROVE</button></a>
-              <a class="unapprove" href="{% url 'unapprove' user.id %}" style="text-decoration: none"><button1>UNAPPROVE</button1></a>
+              <a class="unapprove" href="{% url 'unapprove' user.id %}" style="text-decoration: none">
+                <button1>UNAPPROVE</button1>
+              </a>
             </td>
           </tr>
-            {% endfor %}
+          {% endfor %}
         </table>
       </div>
     </div>
