--- a/clubs/templates/base.html
+++ b/clubs/templates/base.html
@@ -1,22 +1,82 @@
 {% load static %}
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="{% static 'custom.css' %}" rel="stylesheet">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Chess Club</title>
-  </head>
-  <body>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="{% static 'custom.css' %}" rel="stylesheet">
 
-    {% block body %}
-    {% endblock %}
+  <title>Chess Club</title>
+  <link rel="stylesheet" href="../../../static/list.css" </head>
+</head>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+<body>
 
-  </body>
+  <header>
+    <img class="logo" src="../../static/images/logoko.png" alt="logo" width="50" height="50">
+    <nav>
+      <ul class="nav_links">
+        <li>
+          {% if user.user_type == 2 %}
+          <a href="">competition</a>
+          {% endif %}
+          {% if user.user_type == 2 %}
+          <a href="">competition</a>
+          {% endif %}
+        </li>
+        <li>
+          {% if user.user_type == 2 %}
+          <a href='{% url 'applicant_list' %}'>applicants</a>
+          {% endif %}
+          {% if user.user_type == 3 %}
+          <a href='{% url 'applicant_list' %}'>applicants</a>
+          {% endif %}
+        </li>
+
+        <li>
+          {% if user.user_type == 1 %}
+          <a href='{% url 'member_list' %}'>my club</a>
+          {% endif %}
+          {% if user.user_type == 2 %}
+          <a href='{% url 'member_list_for_officer' %}'>my club</a>
+          {% endif %}
+          {% if user.user_type == 3 %}
+          <a href='{% url 'members_and_officers_for_clubowner' %}'>my club</a>
+          {% endif %}
+        </li>
+        <li><a href="">clubs</a></li>
+        <li><a href='{% url 'profile' %}'>my profile</a></li>
+        <li>
+          {% if user.user_type == 0 %}
+          <a href='{% url 'waiting_list' %}'>home</a>
+          {% endif %}
+          {% if user.user_type == 1 %}
+          <a href='{% url 'member_home' %}'>home</a>
+          {% endif %}
+          {% if user.user_type == 2 %}
+          <a href='{% url 'officer_home' %}'>home</a>
+          {% endif %}
+          {% if user.user_type == 3 %}
+          <a href='{% url 'owner_home' %}'>home</a>
+          {% endif %}
+        </li>
+      </ul>
+    </nav>
+    &nbsp
+    <a class="logout" href='{% url 'log_out' %}'>
+      <button3>LOG OUT</button3>
+    </a>
+  </header>
+
+  {% block body %}
+  {% endblock %}
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
+</body>
+
 </html>
