--- a/clubs/templates/base.html
+++ b/clubs/templates/base.html
@@ -10,7 +10,7 @@
   <link href="{% static 'custom.css' %}" rel="stylesheet">
 
   <title>Chess Club</title>
-  <link rel="stylesheet" href="../../../static/list.css" </head>
+  <link rel="stylesheet" href="../../../static/navbar.css" </head>
 </head>
 
 <body>
