--- a/clubs/templates/club_list.html
+++ b/clubs/templates/club_list.html
@@ -12,19 +12,7 @@
     <div class="col-12">
       <br><br>
       <h2>Club List:</h2>
-      {%if user.user_type == 0 %}
-        <a class="btn btn-primary" href="{% url 'waiting_list' %}"><button2>Home</button2></a>
-     {% endif %}
-    {%if user.user_type == 1 %}
-        <a class="btn btn-primary" href="{% url 'member_home' %}"><button2>Home</button2></a>
-     {% endif %}
-      {%if user.user_type == 2 %}
-        <a class="btn btn-primary" href="{% url 'officer_home' %}"><button2>Home</button2></a>
-     {% endif %}
-    {%if user.user_type == 3 %}
-        <a class="btn btn-primary" href="{% url 'owner_home' %}"><button2>Home</button2></a>
-     {% endif %}
-
+      <a class="btn btn-primary" href="{% url 'home' %}"><button2>Home</button2></a>
       <table class="table">
         <th scope="col"> </th>
         <th scope="col">Club Name</th>
