--- a/clubs/templates/applicant_list.html
+++ b/clubs/templates/applicant_list.html
@@ -6,6 +6,7 @@
 
 <head>
   <meta name="viewport" content="wide=device-width, initial_scale=1.0">
+  <link rel="stylesheet" type="text/css" href="../../../static/list.css" />
   <title>applicant</title>
 </head>
 
@@ -13,6 +14,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
+        <br><br>
         <br><br>
         <h2>Applicants</h2>
         <table class="table">
