Add create club functionality

--- a/clubs/templates/create_club.html
+++ b/clubs/templates/create_club.html
@@ -3,18 +3,18 @@
 
 <head>
   <meta content="text/html" charset="UTF-8">
-  <title>profile</title>
+  <title>Create Club</title>
 </head>
 
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <h2>Edit profile</h2>
-      <form action="{% url 'profile' %}" method="post">
+      <h2>Create Club</h2>  <a class="btn btn-primary" href="{% url 'home' %}"><button2>Home</button2></a>
+      <br></br>
+      <form action="{% url 'create_club' %}" method="post">
         {% csrf_token %}
         {% include 'partials/bootstrap_form.html' with form=form %}
-        <input type="submit" value="Update" class="btn btn-primary">
-        <a class="btn btn-primary" href="{% url 'password' %}"><button1>Edit Password</button1></a>
+      <input type="submit" value="Create" class="btn btn-primary">
       </form>
     </div>
   </div>
