--- a/clubs/templates/home.html
+++ b/clubs/templates/home.html
@@ -52,7 +52,7 @@
       <h2>Let's Play Together</h2>
       <p>Create club to play with other</p>
       <br><br>
-      <a href="#" class="btn">Create Club</a>
+      <a href='{% url 'create_club' %}' class="btn">Create Club</a>
     </div>
   </section>
 
