Add specific login errors

--- a/clubs/templates/log_in.html
+++ b/clubs/templates/log_in.html
@@ -18,7 +18,7 @@
         <div class="col-12 my-auto">
           <div class="card cover-card offset-sm-2 offset-md-4 offset-lg-7">
             <h1 class="cover-heading">CHESS CLUB</h1>
-            <h1 class="cover-text"> Please Sign In Your Account </h1>
+            <h1 class="cover-text"> Please Sign Into Your Account </h1>
 
 
             <form action="{% url 'log_in' %}" method="post">
