--- a/clubs/templates/base.html
+++ b/clubs/templates/base.html
@@ -8,9 +8,8 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="{% static 'custom.css' %}" rel="stylesheet">
-
+  <link rel="stylesheet" href="../../../static/navbar.css"/>
   <title>Chess Club</title>
-  <link rel="stylesheet" href="../../../static/navbar.css" </head>
 </head>
 
 <body>
@@ -20,11 +19,8 @@
     <nav>
       <ul class="nav_links">
         <li>
-          {% if user.user_type == 2 %}
-          <a href="">competition</a>
-          {% endif %}
-          {% if user.user_type == 2 %}
-          <a href="">competition</a>
+          {% if user.user_type == 3 %}
+          <a href='{% url 'officers' %}'>ownership</a>
           {% endif %}
         </li>
         <li>
