--- a/clubs/templates/register.html
+++ b/clubs/templates/register.html
@@ -1,36 +1,59 @@
-{% extends "base_content.html" %}
-{% block body %}
-<div class="container">
-  <div class="row">
-    <div class="col-12">
-      <h1>Register</h1>
-      <form action="{% url 'register' %}" method="post">
-        {% csrf_token %}
-        {% load widget_tweaks %}
-        {% for field in form %}
-         <div class="mb-3">
-           {{ field.label_tag }}
-           {% if form.is_bound %}
+{% load static %}
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="{% static 'custom.css' %}" rel="stylesheet">
+  <link rel="stylesheet" href="../../../static/navbar.css" />
+  <title>Chess Club</title>
+</head>
+
+<body>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <h1>Register</h1>
+        <form action="{% url 'register' %}" method="post">
+          {% csrf_token %}
+          {% load widget_tweaks %}
+          {% for field in form %}
+          <div class="mb-3">
+            {{ field.label_tag }}
+            {% if form.is_bound %}
             {% if field.errors %}
-              {% render_field field class="form-control is-invalid" %}
+            {% render_field field class="form-control is-invalid" %}
             {% else %}
-              {% render_field field class="form-control is-valid" %}
+            {% render_field field class="form-control is-valid" %}
             {% endif %}
-           {% else %}
+            {% else %}
             {% render_field field class="form-control" %}
-           {% endif %}
-           <div class="valid-feedback">
-             Looks good!
-           </div>
-           <div class="invalid-feedback">
-             {{ field.errors }}
-           </div>
-         </div>
-        {% endfor %}
-        <input type="submit" value="Register" class="btn btn-primary"> </input>
-      </form>
+            {% endif %}
+            <div class="valid-feedback">
+              Looks good!
+            </div>
+            <div class="invalid-feedback">
+              {{ field.errors }}
+            </div>
+          </div>
+          {% endfor %}
+          <input type="submit" value="Register" class="btn btn-primary"> </input>
+          <br><br>
+        </form>
+      </div>
     </div>
   </div>
-</div>
+  {% block body %}
 
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
+</body>
+
+</html>
 {% endblock %}
