--- a/clubs/templates/base.html
+++ b/clubs/templates/base.html
@@ -44,7 +44,8 @@
           <a href='{% url 'members_and_officers_for_clubowner' %}'>my club</a>
           {% endif %}
         </li>
-        <li><a href="">clubs</a></li>
+        <li><a href='{% url 'club_list' %}'>clubs</a></li>
+
         <li><a href='{% url 'profile' %}'>my profile</a></li>
         <li><a href='{% url 'home' %}'>home</a></li>
       </ul>
