Temporarily remove conditional

--- a/clubs/templates/club_list.html
+++ b/clubs/templates/club_list.html
@@ -20,7 +20,7 @@
         <th scope="col">Description</th>
         <th scope="col">Apply/ Unapply</th>
         {% for club in clubs %}
-        <!-- {% if !user.in_club %} conditional to ensure clubs the user is in arent showed -->
+        <!-- conditional to ensure clubs the user is in arent showed -->
         <tr>
           <td>
             <!-- will be club owners gravatar -->
