--- a/clubs/templates/home.html
+++ b/clubs/templates/home.html
@@ -30,7 +30,7 @@
     <ul>
       <li><a href='{% url 'club_list' %}' style="text-decoration: none">CLUBS</a></li>
       <li><a href='{% url 'applicant_list' %}' style="text-decoration: none">APPLICANTS</a></li>
-      <li><a href='{% url 'member_list_for_officer' %}' style="text-decoration: none">MY CLUB</a></li>
+      <li><a href='{% url 'member_list_for_officer' %}' style="text-decoration: none">MY CLUBS</a></li>
       <li><a href='{% url 'profile' %}' style="text-decoration: none">MY PROFILE</a></li>
     </ul>
   {% endif %}
@@ -38,7 +38,7 @@
   <ul>
     <li><a href='{% url 'club_list' %}' style="text-decoration: none">CLUBS</a></li>
     <li><a href='{% url 'applicant_list' %}' style="text-decoration: none">APPLICANTS</a></li>
-    <li><a href='{% url 'members_and_officers_for_clubowner' %}' style="text-decoration: none">MY CLUB</a></li>
+    <li><a href='{% url 'members_and_officers_for_clubowner' %}' style="text-decoration: none">MY CLUBS</a></li>
     <li><a href='{% url 'officers' %}' style="text-decoration: none">OWNERSHIP</a></li>
     <li><a href='{% url 'profile' %}' style="text-decoration: none">MY PROFILE</a></li>
   </ul>
