--- a/clubs/templates/home.html
+++ b/clubs/templates/home.html
@@ -51,7 +51,7 @@
   <section class="banner">
     <div class="content">
       <h2>Let's Play Together</h2>
-      <p>Create club to play with other</p>
+      <p>Create a club to play with others</p>
       <br><br>
       <a href='{% url 'create_club' %}' class="btn">Create Club</a>
     </div>
