edit some format

--- a/clubs/templates/partials/bootstrap_form.html
+++ b/clubs/templates/partials/bootstrap_form.html
@@ -12,7 +12,8 @@
       {% render_field field class="form-control" %}
     {% endif %}
     <div class="valid-feedback">
-      Looks good!
+      <div class="pass">
+        Create Successfully
     </div>
     <div class="invalid-feedback">
       {{ field.errors }}
