--- a/clubs/templates/club_list.html
+++ b/clubs/templates/club_list.html
@@ -13,20 +13,23 @@
       <br><br>
       <br><br>
       <h2>Club List</h2>
+      <a href='{% url 'create_club' %}' class="btn">Create a Club</a>
+      <br><br>
       <table class="table">
         <th scope="col"> </th>
         <th scope="col">Club Name</th>
         <th scope="col">Location</th>
         <th scope="col">Description</th>
+        <th scope="col">Apply</th>
         {% for club in clubs %}
         <tr>
           <td>
             <img src="{{ user.mini_gravatar }}" alt="Gravatar of {{ user.email }}" class="rounded-circle">
           </td>
           <td>{{ club.club_name }}</td>
-
           <td>{{ club.club_location }}</td>
           <td>{{ club.club_description }}</td>
+          <td><a class="apply" href=""><button1>APPLY</button1></a></td>
         </tr>
         {% endfor %}
       </table>
