--- a/clubs/templates/create_club.html
+++ b/clubs/templates/create_club.html
@@ -9,12 +9,13 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <h2>Create Club</h2>  <a class="btn btn-primary" href="{% url 'home' %}"><button2>Home</button2></a>
-      <br></br>
+      <br></br><br></br>
+      <h2>Create Club</h2>
       <form action="{% url 'create_club' %}" method="post">
         {% csrf_token %}
         {% include 'partials/bootstrap_form.html' with form=form %}
-      <input type="submit" value="Create" class="btn btn-primary">
+        <br><br>
+        <input type="submit" value="Create" class="btn btn-primary">
       </form>
     </div>
   </div>
